<resources>
    <!--App-->
    <string name="teste">Teste</string>
    <string name="app_name">Challenge-Squad-Apps</string>
    <string name="salvar">Salvar</string>
    <string name="empty" />

    <!--Dropdown-->
    <string name="dropdownMenu">Dropdown Menu</string>
    <string name="dropdown_editar_dispositivo">Editar dispositivo</string>
    <string name="dropdown_desmarcar_favorito">Desmarcar favorito</string>
    <string name="dropdown_marcar_favorito">Marcar favorito</string>
    <string name="dropdown_remover_dispositivo">Remover dispositivo</string>
    <string name="dropdown_informacoes">Informações</string>

    <!--Informações-->
    <string name="info_informacoes">Informações</string>
    <string name="info_tipo">Tipo:</string>
    <string name="info_numero_de_serie">Número de Série:</string>
    <string name="info_mac_address">Mac Address:</string>
    <string name="info_usuario">Usuário:</string>


    <!--Add Device-->
    <string name="add_device_novo_dispositivo">Novo Dispositivo</string>
    <string name="add_device_helper">Escolha o tipo de dispositivo que deseja adicionar</string>
    <string name="add_device_tipo_de_dispositivo">Tipo de dispositivo</string>
    <string name="add_device_nome">Nome</string>
    <string name="add_device_serial_number">Número de série</string>
    <string name="add_device_user">Usuário</string>
    <string name="add_device_password">Senha</string>
    <string name="add_device_mac_address">MAC Address</string>


    <!--Edit Video Device-->
    <string name="edit_device_editar_dispositivo">Editar Dispositivo</string>
    <string name="edit_device_password">Senha</string>
    <string name="edit_device_user">Usuário</string>
    <string name="edit_device_serial_number">Número de série</string>
    <string name="edit_device_nome">Nome</string>
    <string name="edit_device_mac_address">Mac Address</string>


    <!--Dialog-->
    <string name="dialog_confirmar">Confirmar</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_dispositivo_editado_com_sucesso">Dispositivo editado com sucesso.</string>
    <string name="dialog_falha_ao_atualizar_informacoes_do_dispositivo">Falha ao atualizar informações do dispositivo.</string>
    <string name="dialog_remover_dispositivo">Remover dispositivo?</string>
    <string name="dialog_voce_tem_certeza_que_deseja_remover_este_dispositivo">Você tem certeza que deseja remover este dispositivo?</string>
    <string name="dialog_falha_ao_cadastrar_informacoes_do_dispositivo">Falha ao cadastrar informações do dispositivo.</string>

    <!--HTTP Error-->
    <string name="HTTP_200_OK">Informações atualizadas com sucesso.</string>
    <string name="HTTP_201_CREATED">Dispositivo cadastrado com sucesso.</string>
    <string name="HTTP_400_BAD_REQUEST">A requisição não pôde ser atendida pelo servidor. \nVerifique as informações inseridas e tente novamente.</string>
    <string name="HTTP_401_UNAUTHORIZED">Acesso negado. A autenticação é necessária e falhou ou não foi fornecida. \nVerifique suas credenciais e tente novamente.</string>
    <string name="HTTP_403_FORBIDDEN">Acesso negado. Você não tem permissão para acessar o recurso solicitado. \nVerifique suas permissões de acesso.</string>
    <string name="HTTP_404_NOT_FOUND">O recurso solicitado não pôde ser encontrado no servidor. \nVerifique a URL digitada e tente novamente.</string>
    <string name="HTTP_409_CONFLICT">Número de série ou Mac Address informado já cadastrado. \nPara realizar alterações em um dispositivo existente, utilizar a função \"Editar dispositivo\".</string>
    <string name="HTTP_500_INTERNAL_SERVER_ERROR">O servidor encontrou uma condição inesperada que o impediu de atender à solicitação. \nTente novamente mais tarde.</string>
    <string name="HTTP_503_SERVICE_UNVAILABLE">O servidor não está disponível no momento. \nIsso pode ocorrer devido a sobrecarga do servidor ou manutenção em andamento. \nTente novamente mais tarde.</string>

    <!-- Toast -->
    <string name="falha_ao_remover_dispositivo">Falha ao remover dispositivo</string>
    <string name="dispositivo_removido">Dispositivo removido!</string>
</resources>