<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/generalMenuGroup">
        <item
            android:id="@+id/editMenuItem"
            android:icon="@drawable/icedit"
            android:title="@string/dropdown_editar_dispositivo"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/infoMenuItem"
            android:icon="@drawable/icdeviceinfo"
            android:title="@string/dropdown_informacoes"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/unfavoriteMenuItem"
            android:icon="@drawable/icunmarkbookmark"
            android:title="@string/dropdown_desmarcar_favorito"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/favoriteMenuItem"
            android:icon="@drawable/icbookmark"
            android:title="@string/dropdown_marcar_favorito"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/deleteMenuItemGroup">
        <item
            android:id="@+id/deleteMenuItem"
            android:icon="@drawable/icdelete"
            android:title="@string/dropdown_remover_dispositivo"
            app:showAsAction="ifRoom" />
    </group>
</menu>