<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/info_device_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/gray_bg"
            app:navigationIcon="@drawable/icclose"
            app:title="@string/info_informacoes" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <LinearLayout
                android:id="@+id/info_linearLayout_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/info_linearLayout_serial_number"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/info_device_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/info_tipo"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fill_info_devcice_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/info_tipo" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/info_linearLayout_serial_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_linearLayout_type"
                app:layout_constraintBottom_toTopOf="@id/info_linearLayout_user">

                <TextView
                    android:id="@+id/info_device_serial_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/info_numero_de_serie"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fill_info_device_serial_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/info_numero_de_serie" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_linearLayout_user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/info_linearLayout_serial_number"
                app:layout_constraintBottom_toTopOf="@id/info_linearLayout_mac"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/info_device_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/info_usuario"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fill_info_device_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/info_usuario" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_linearLayout_mac"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/info_linearLayout_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/info_device_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/info_mac_address"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fill_info_device_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/info_mac_address" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>